Fix rendering to not cut off edges of canvas

--- a/assets/game.css
+++ b/assets/game.css
@@ -16,17 +16,6 @@ a:hover {
   text-decoration: none;
 }
 
-canvas {
-  border: 1px #fff solid;
-
-  image-rendering: optimizeSpeed;             /* Older versions of FF */
-  image-rendering: -moz-crisp-edges;          /* FF 6.0+ */
-  image-rendering: -webkit-optimize-contrast; /* Safari */
-  image-rendering: -o-crisp-edges;            /* OS X & Windows Opera (12.02+) */
-  image-rendering: pixelated;                 /* Awesome future-browsers */
-  -ms-interpolation-mode: nearest-neighbor;   /* IE */
-}
-
 canvas#game-canvas {
   background: #000;
 }
